<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileSportApp</string>
    <string name="title_section1">Pedometer</string>
    <string name="title_section2">Statistics</string>
    <string name="title_section3">Heartrate</string>
    <string name="title_section4">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="steps_total">Total Steps</string>
    <string name="service_name">Service Name</string>
    
    
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="LoginBtn">Login</string>
    <string name="SignupBtn">Sign Up</string>
    <string name="Email">Email</string>
    <string name="Height">Height[cm]</string>
    <string name="Weight">Weight[kg]</string>
    <string name="Age">Age</string>
    <string name="Gender">Gender</string>
    <string name="Step_Length">Step Length[cm]</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    
    <string name="SubmitBtn">Submit</string>
    <string name="LogoutBtn">Log Out</string>
    <string name="ExitBtn">Exit</string>
    
    

</resources>
