<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  	android:layout_width="fill_parent"
    android:layout_height="fill_parent">
        
<RelativeLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dip" >
 
    <TextView
        android:id="@+id/txtusername"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Username" />
 
    <EditText
        android:id="@+id/username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername"
        android:inputType="text" />
 
    <TextView
        android:id="@+id/txtpassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:text="@string/Password" />
 
    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword"
        android:inputType="textPassword" />
    
    <TextView
        android:id="@+id/txtemail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:text="@string/Email" />
    
     <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemail"
        android:inputType="text" />
 
     <TextView
        android:id="@+id/txtheight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:text="@string/Height" />
    
     <EditText
        android:id="@+id/height"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtheight"
        android:inputType="text" />
     
     <TextView
        android:id="@+id/txtweight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/height"
        android:text="@string/Weight" />
    
     <EditText
        android:id="@+id/weight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtweight"
        android:inputType="text" />
     
     <TextView
        android:id="@+id/txtage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/weight"
        android:text="@string/Age" />
    
     <EditText
        android:id="@+id/age"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtage"
        android:inputType="text" />
     
   <TextView
        android:id="@+id/txtstep_length"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/age"
        android:text="@string/Step_Length" />
    
     <EditText
        android:id="@+id/step_length"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtstep_length"
        android:inputType="text" />
     
     <RadioGroup
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/step_length"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="male" 
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="female" />

    </RadioGroup>
    
    <Button
        android:id="@+id/signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender"
        android:text="@string/SignupBtn" />
 
</RelativeLayout>
</ScrollView>